crates/ignis_codegen_c/tests/snapshots/golden_c__c_rc_basic_drop.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
expression: c_code
---
#include "types.h"

int main(void);

int main(void) {
    // Locals
    IgnisRcBox* l0; // r

    // Temporaries
    IgnisRcBox* t0;

entry_0:
    t0 = (IgnisRcBox*)ignis_rc_alloc(sizeof(i32), NULL);
    *((i32*)ignis_rc_get(t0)) = 42;
    l0 = t0;
    ignis_rc_release(l0);
    return 0;
}
