crates/ignis_codegen_c/tests/snapshots/golden_c__c_rc_clone_retain.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
expression: c_code
---
#include "types.h"

static void ignis_rc_drop_i32(u8* payload) {
    (void)payload;
}

int main(void);

int main(void) {
    // Locals
    void* l0; // a
    void* l1; // b

    // Temporaries
    void* t0;
    void* t1;
    void* t2;

entry_0:
    t0 = (void*)my_rc_alloc((u64)sizeof(i32), (u64)_Alignof(i32), (void*)ignis_rc_drop_i32);
    *((i32*)my_rc_get(t0)) = 10;
    l0 = t0;
    t1 = l0;
    my_rc_retain(t1);
    t2 = t1;
    l1 = t2;
    my_rc_release(l1);
    my_rc_release(l0);
    return 0;
}
