crates/ignis_codegen_c/tests/snapshots/golden_c__c_record_with_closure_field_by_value_ordering.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
assertion_line: 1127
expression: c_code
---
#ifndef IGNIS_RT_TYPES_H
#define IGNIS_RT_TYPES_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

typedef uint8_t u8;
typedef uint16_t u16;
typedef uint32_t u32;
typedef uint64_t u64;

typedef int8_t i8;
typedef int16_t i16;
typedef int32_t i32;
typedef int64_t i64;

typedef float f32;
typedef double f64;

typedef u8 boolean;

typedef u32 ignis_atom_t;
typedef u32 ignis_char_t;

typedef void *Pointer;

#define TRUE 1
#define FALSE 0

typedef u32 IgnisTypeId;

#define IGNIS_TYPE_I8_ID 0
#define IGNIS_TYPE_I16_ID 1
#define IGNIS_TYPE_I32_ID 2
#define IGNIS_TYPE_I64_ID 3
#define IGNIS_TYPE_U8_ID 4
#define IGNIS_TYPE_U16_ID 5
#define IGNIS_TYPE_U32_ID 6
#define IGNIS_TYPE_U64_ID 7
#define IGNIS_TYPE_F32_ID 8
#define IGNIS_TYPE_F64_ID 9
#define IGNIS_TYPE_BOOL_ID 10
#define IGNIS_TYPE_CHAR_ID 11
#define IGNIS_TYPE_STRING_ID 12
#define IGNIS_TYPE_PTR_ID 200

typedef struct IgnisString {
  char *data;
  size_t len;
  size_t cap;
} IgnisString;

typedef void *null;

#endif // IGNIS_RT_TYPES_H

#include "types.h"

// Type forward declarations
typedef struct Adder Adder;

// Closure types
struct __closure_env_10 {
    i32 field_0;
};
#ifndef IGNIS_TYPE_DEF___IGNIS_CLOSURE_I32_I32
#define IGNIS_TYPE_DEF___IGNIS_CLOSURE_I32_I32
struct __ignis_closure_i32_i32 {
    i32 (*call)(u8*, i32);
    void (*drop_fn)(u8*);
    u8* env;
};
#endif // IGNIS_TYPE_DEF___IGNIS_CLOSURE_I32_I32

// Type definitions
struct Adder {
    i32 field_0;
    struct __ignis_closure_i32_i32 field_1;
};

static i32 __ignis_user_main(void);
static i32 ____closure__thunk__0_ptr_u8_i32_i32(u8* ____closure__env__0, i32 n);

#line 7 "test.ign"
static i32 __ignis_user_main(void) {
    // Locals
    i32 l0; // offset
    struct Adder l1; // adder
    struct __ignis_closure_i32_i32 l2; // f

    // Temporaries
    i32 t0;
    i32 t1;
    struct __ignis_closure_i32_i32 t2;
    struct Adder* t3;
    struct Adder* t4;
    struct __ignis_closure_i32_i32* t5;
    struct __ignis_closure_i32_i32 t6;
    struct __ignis_closure_i32_i32 t7;
    i32 t8;

entry_0:
    l0 = 10;
    t0 = l0;
    t1 = l0;
    struct __closure_env_10 __env_t2;
    __env_t2.field_0 = t1;
    t2 = (struct __ignis_closure_i32_i32){ (i32(*)(u8*, i32))____closure__thunk__0_ptr_u8_i32_i32, NULL, (u8*)&__env_t2 };
    t3 = &l1;
    __builtin_memset((void*)t3, 0, sizeof(*t3));
(t3)->field_0 = t0;
    (t3)->field_1 = t2;
    t4 = &l1;
    t5 = &((t4)->field_1);
    t6 = *t5;
    l2 = t6;
    t7 = l2;
    t8 = t7.call(t7.env, 32);
    return t8;
}

#line 125 "<generated-c>"

#line 9 "test.ign"
static i32 ____closure__thunk__0_ptr_u8_i32_i32(u8* ____closure__env__0, i32 n) {
    // Locals
    u8* l0; // __closure_env_0
    i32 l1; // n
    i32 l2; // _

    // Temporaries
    u8* t0;
    i32 t1;
    u8* t2;
    i32* t3;
    i32 t4;
    i32 t5;
    i32 t6;
    i32 t7;

entry_0:
    l0 = ____closure__env__0;
    l1 = n;
    t2 = l0;
    t3 = &(((struct __closure_env_10*)t2))->field_0;
    t4 = *t3;
    l2 = t4;
    t5 = l1;
    t6 = l2;
    t7 = t5 + t6;
    return t7;
}

#line 157 "<generated-c>"

int main(int argc, char** argv) {
    ignis_runtime_init((i32)argc, argv);
    (void)argc;
    (void)argv;
    return __ignis_user_main();
}
